Update after MR review